--- a/plonetheme/onegovbear/theme/scss/editbar.scss
+++ b/plonetheme/onegovbear/theme/scss/editbar.scss
@@ -18,6 +18,7 @@ $editbar-link-hover-color: $link-hover-color;
   min-height: 2em;
   margin: 0;
   margin-bottom: 1em;
+  padding: 0;
   display: block;
   @include borderradius(0.5em 0.5em 0 0);
 
@@ -30,8 +31,8 @@ $editbar-link-hover-color: $link-hover-color;
     display: block;
 
     a {
-      line-height: 2.25em;
-      padding: 0.5em;
+      display: inline-block;
+      padding: 0.4em 0.5em 0.5em 0.5em;
       color: $editbar-link-color;
     }
 
