Completely remove banner specific stuff.

--- a/plonetheme/onegovbear/theme/scss/overrides.scss
+++ b/plonetheme/onegovbear/theme/scss/overrides.scss
@@ -212,8 +212,7 @@ body #internallinkcontainer .list.item a {
 
 /* @group customstyles */
 
-body.template-customstyles_form #slider-wrapper,
-body.template-customstyles_form #banner-image {
+body.template-customstyles_form #slider-wrapper {
   display: none;
 }
 body.template-customstyles_form label {
