--- a/plonetheme/onegovbear/theme/scss/editbar.scss
+++ b/plonetheme/onegovbear/theme/scss/editbar.scss
@@ -22,10 +22,6 @@ $editbar-link-hover-color: $link-hover-color;
   display: block;
   @include borderradius(0.5em 0.5em 0 0);
 
-  ul {
-    @include ul('inline');
-  }
-
   #content-views {
     float: left;
     display: block;
@@ -52,6 +48,7 @@ $editbar-link-hover-color: $link-hover-color;
   .contentActions {
     > #contentActionMenus dd.actionMenuContent {
       border-top-width: 0;
+      @include borderradius(0 0 $menu-border-radius $menu-border-radius);
     }
 
     > #contentActionMenus > li {
