update portal message margins.
leave more space to other elements.

--- a/plonetheme/onegovbear/theme/scss/messages.scss
+++ b/plonetheme/onegovbear/theme/scss/messages.scss
@@ -18,7 +18,7 @@ $portalmessage-border-color: #ccc;
 
 dl.portalMessage {
   display: block;
-  margin: 0.5em 0;
+  margin: 1em 2em;
 
   dt {
     padding: 0.4em 1em;
