--- a/plonetheme/onegovbear/theme/scss/messages.scss
+++ b/plonetheme/onegovbear/theme/scss/messages.scss
@@ -16,13 +16,14 @@ $portalmessage-border-color: #ccc;
   }
 }
 
-dl.portalMessage {
+dl.portalMessage, #content dl.portalMessage {
   display: block;
   margin: 1em 2em;
 
   dt {
     padding: 0.4em 1em;
     display: table-cell;
+    font-weight: normal;
     @include borderradius(5px 0 0 5px);
   }
 
