--- a/plonetheme/onegovbear/theme/scss/search.scss
+++ b/plonetheme/onegovbear/theme/scss/search.scss
@@ -2,7 +2,7 @@
 
 #portal-searchbox {
   & #searchGadget {
-    @include inputfield($full-width:true);
+    @include inputfield();
     @include boxshadow(0 0 0.5em $page-bordercolor inset);
     &:focus {
       /* TODO: should this be in a variable? */
