--- a/plonetheme/onegovbear/theme/scss/batching.scss
+++ b/plonetheme/onegovbear/theme/scss/batching.scss
@@ -1,46 +1,15 @@
-
-/* @group onegovBatching */
-
-#content div.listingBar.onegovBatching,
-div.listingBar.onegovBatching {
-
-  a, span.current {
-    padding: 0.25em 0.5em;
-    vertical-align: middle;
-    text-decoration: none;
-  }
-
-  span.current {
-    @include borderradius();
-    background-color: #e7eff0;
-  }
+#content .listingBar, .listingBar {
+  margin: 0.5em 0;
 
   .previous {
-    display: inline;
-    @include icon(' ');
-    &:before {
-      font-size: 0.8em;
-    }
+    float: left;
   }
 
   .next {
-    display: inline;
-    float: none;
-    @include icon(' ', $style: 'after');
-    &:after {
-      font-size: 0.8em;
-    }
+    float: right;
   }
 
+  a {
+    @include button($button-standalone-color);
+  }
 }
-
-
-/* @end */
-
-/* @group folder content batching */
-
-#content .tab_container div.listingBar {
-  display: inline-block;
-}
-
-/* @end */
