fix variable registration in plone-datepicker.scss.

--- a/plonetheme/onegovbear/theme/scss/plone-datepicker.scss
+++ b/plonetheme/onegovbear/theme/scss/plone-datepicker.scss
@@ -6,10 +6,10 @@ $plone-datepicker-border-radius: $menu-border-radius;
 
 @if function-exists(register-theming-variables) {
   ?: register-theming-variables(color,
-                                $plone-datepicker-bg-color,
-                                $plone-datepicker-heading-bg-color,
-                                $plone-datepicker-hover-bg-color,
-                                $plone-datepicker-border-color);
+                                plone-datepicker-bg-color,
+                                plone-datepicker-heading-bg-color,
+                                plone-datepicker-hover-bg-color,
+                                plone-datepicker-border-color);
 
   ?: register-theming-variables(width,
                                 plone-datepicker-border-radius);
