--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -1,5 +1,10 @@
 #breadcrumbs-wrapper {
   margin-bottom: 0.5em;
+  margin-top: 1em;
+
+  #portal-breadcrumbs {
+    float:left;
+  }
 
   @include tablet {
     display:none;
