--- a/plonetheme/onegovbear/theme/scss/controlpanel.scss
+++ b/plonetheme/onegovbear/theme/scss/controlpanel.scss
@@ -17,3 +17,27 @@
     }
   }
 }
+
+body.template-theming-controlpanel {
+  #visual-portal-wrapper {
+    @include clearfix();
+    width: $page-fixed-width;
+    margin: 0 auto;
+    background: #FFF;
+  }
+
+  #portal-column-one {
+    @include position0();
+    @include width4();
+  }
+  #portal-column-content {
+    @include position4();
+    @include width12();
+  }
+  #portal-logo { clear: both; }
+
+  #portal-searchbox,
+  #portal-footer-wrapper {
+    display: none;
+  }
+}
