remove unused mixins.

--- a/plonetheme/onegovbear/theme/scss/form.scss
+++ b/plonetheme/onegovbear/theme/scss/form.scss
@@ -140,8 +140,8 @@ input[type="radio"] {
   }
 
   textarea {
+    @include boxshadow(border-box);
     width: 100%;
-    box-sizing: border-box;
   }
 
   input[type="text"][name$="title"],
