--- a/plonetheme/onegovbear/theme/scss/filter.scss
+++ b/plonetheme/onegovbear/theme/scss/filter.scss
@@ -49,7 +49,7 @@
                 }
             }
             ul {
-                @include ul('plain');
+                @include ul(plain);
 
                 display: none;
                 position: absolute;
