--- a/plonetheme/onegovbear/theme/scss/personaltools.scss
+++ b/plonetheme/onegovbear/theme/scss/personaltools.scss
@@ -3,7 +3,7 @@
 
   /* Anonymous: list actions by floating */
   ul {
-    @include ul('inline');
+    @include ul(inline);
 
     a {
       &:after {
