--- a/plonetheme/onegovbear/theme/scss/personaltools.scss
+++ b/plonetheme/onegovbear/theme/scss/personaltools.scss
@@ -1,6 +1,10 @@
 #portal-personaltools-wrapper {
   float: right;
 
+  dl {
+    @include dl(plain);
+  }
+
   /* Anonymous: list actions by floating */
   ul {
     @include ul(inline);
